k8s/apps/epgstation/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default

  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
      protocol: TCP
